--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde_yaml = "0.9"
 # Data & Templates
 tera = "1.20"
 serde_json_path = "0.7"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
