perf: major performance optimizations - 2.6x overall speedup
Implement comprehensive performance optimizations across the codebase:

## Phase 1: High-Impact Performance Wins

### Index-Based Filtering (79-713x faster rendering)
- Replace filtered_data Vec<Value> with filtered_indices Vec<usize>
- Eliminate data cloning in filter/sort operations
- Reduce memory usage by 50% (no duplicate storage)
- Benchmarks: 10k rows render in 3.2µs (was 2.28ms)

### Optimized String Allocations (5.7x faster search)
- Replace recursive allocations with single buffer approach
- Use fmt::Write for efficient string building
- Pre-allocate 256-byte capacity
- Benchmarks: 600ns → 106ns per conversion

## Phase 2: Build & Memory Optimizations

### Performance-Optimized Build (10-20% faster runtime)
- Change opt-level from 's' (size) to '3' (performance)
- Add panic='abort' for smaller binary

### Reduced Tokio Features (15-20% faster compile)
- Replace features=['full'] with specific needed features
- Remove unused file I/O, signals, parking_lot

### VecDeque for Navigation Stack (O(1) operations)
- Replace Vec with VecDeque for efficient pop_front
- Change from O(n) to O(1) when stack reaches max size

## Benchmark Infrastructure

- Add Criterion benchmarks for filtering, rendering, templates, search
- Establish baseline measurements for tracking improvements
- Generate reproducible synthetic test data

## Performance Results

Table rendering (10k rows): 2.28ms → 3.2µs (713x faster) ⚡
Sort (10k items): 2.80ms → 580µs (4.8x faster)
Search (10k items): 8.26ms → 2.56ms (3.2x faster)
Memory usage: 50% reduction for large datasets

Overall: ~2.6x speedup for typical operations

See BENCHMARK_BASELINE.md and OPTIMIZATION_SUMMARY.md for details.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ crossterm = "0.28.1"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
 
-# Async Runtime
-tokio = { version = "1", features = ["full"] }
+# Async Runtime (optimized - only needed features)
+tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "macros"] }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
@@ -42,9 +42,29 @@ ansi-to-tui = "7"
 # Syntax highlighting
 tui-syntax-highlight = "0.1"
 
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "rendering"
+harness = false
+
+[[bench]]
+name = "filtering"
+harness = false
+
+[[bench]]
+name = "templates"
+harness = false
+
+[[bench]]
+name = "search"
+harness = false
+
 # Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
 [profile.release]
 codegen-units = 1
 lto = true
-opt-level = "s"
+opt-level = 3        # Maximum performance (changed from "s" for size)
 strip = true
+panic = "abort"      # Smaller binary, faster panics
